fix contrast issue

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: #333;
+  color: #fff;
   margin: 0;
   padding: 0;
 }
@@ -39,9 +40,15 @@ img {
 
 .main-nav ul li a {
   display: block;
-  color: inherit;
-  text-decoration: none;
+  color: #00aaff;
+  text-decoration: underline;
   font-size: 1.25rem;
+}
+
+.main-nav ul li a:hover, 
+.main-nav ul li a:focus{
+  color: #ffcc00;
+  text-decoration: none;
 }
 
 form input,
